fixed z-index

--- a/webapp/css/app.css
+++ b/webapp/css/app.css
@@ -107,6 +107,7 @@ input[type="text"]:HOVER,textarea:HOVER {
 }
 
 #myheader {
+	z-index: 100;
 	position: fixed;
 	top: 20px;
 	bottom: 20px;
